# romea-localisation-bringup

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  romea_localisation_bringup.repos
config/: robot_to_human_localisation.yaml  robot_to_robot_localisation.yaml  robot_to_world_localisation.yaml
launch/: gps_plugin.launch.py  outdoor_localisation.launch.py  robot_to_human_localisation.launch.py  robot_to_robot_localisation.launch.py  robot_to_world_localisation.launch.py
launch/cores/: romea_robot_to_human_localisation_core.launch.py  romea_robot_to_robot_localisation_core.launch.py  romea_robot_to_world_localisation_core.launch.py
launch/plugins/: romea_localisation_gps_plugin.launch.py  romea_localisation_imu_plugin.launch.py  romea_localisation_odo_plugin.launch.py  romea_localisation_rtls_plugin.launch.py
python/: romea_localisation_bringup.py  romea_robot_to_world_localisation_bringup.py
